# Bastion

./: GEMINI.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.husky/: pre-commit
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-module-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-VERIFICATION.md  02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: create-app.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  state.rs
src-tauri/src/vault/: README.md  commands.rs  compression.rs  crypto.rs  errors.rs  history.rs  index.rs  mod.rs  search.rs  settings.rs  types.rs  vault_service.rs
src/apps/: index.ts  types.d.ts
src/apps/sigil/: index.tsx
src/apps/sigil/desktop/: Sidebar.tsx  Workspace.tsx
src/components/: index.ts
src/components/desktop/apps/: Apps.tsx  AppsBar.tsx
src/components/desktop/appsBar/: AppsBar.tsx
src/components/desktop/sidebar/: GlobalSidebar.tsx  ModuleSidebar.tsx  index.ts  (+3 more)
src/components/ui/: button.tsx  theme.ts
src/modules/: index.ts  types.d.ts
src/modules/notes/: index.tsx
src/modules/sigil/: index.tsx
src/services/: VaultService.ts  types.ts
src/store/: appStore.ts
src/tests/services/: VaultService.test.ts
src/utils/: Logger.ts  index.ts
(+17 files in other folders)
